data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_42.wast
;; 3. **Test Description**: Design a `block` with a `br_table` that uses a mislabeled index causing the generated index value to fall outside the acceptable range. This will ensure implementations catch incorrect index generation and handle it gracefully.    - **Constraint Checked**: Error detection for improper index values in `br_table`.

(assert_invalid
  (module (func $br_table-invalid-index
    (block (result i32)
      (block
        (br_table 0 1 2 (i32.const 3))
        (i32.const 1)
      )
    )
  ))
  "unknown label"
)